--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+
+#Temporarily exempted files
+src/app/Components/table-generator/
+
+
 # Compiled output
 /dist
 /tmp
